feat: 🚧 change icon

--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Portafolio de Kevin Jimenez - Enginner Software</title>
+    <title>Kevin Jimenez | Portafolio</title>
     <base href="/" />
     <meta
       name="description"
       content="Especializado en creacion de apliaciones"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="avatar.png" />
   </head>
   <body>
     <app-root></app-root>
